--- a/manifest.yml
+++ b/manifest.yml
@@ -1,10 +1,10 @@
 applications:
 - path: .
   memory: 256M
-  instances: 1
-  domain: mybluemix.net
+  instances: 2
   name: erichensley-nlc-demo
-  host: erichensley-nlc-demo
+  routes:
+  - route: erichensley-nlc-demo-test.mybluemix.net
   disk_quota: 1024M
   services:
   - Natural Language Classifier-ah
